--- a/lib/phoenix_rise_web/live/country_live/index.html.heex
+++ b/lib/phoenix_rise_web/live/country_live/index.html.heex
@@ -9,6 +9,7 @@
 
 <.table
   id="countries"
+  filters={@filters}
   rows={@streams.countries}
   row_click={fn {_id, country} -> JS.navigate(~p"/countries/#{country}") end}
 >
